take out .sql file setup because of credential exposing

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,15 +1,17 @@
 FROM debian:bullseye
 
-RUN apt update && apt install -y mariadb-server mariadb-client moreutils gettext vim && rm -rf /var/lib/apt/lists/*
+RUN apt update && apt install -y mariadb-server mariadb-client && rm -rf /var/lib/apt/lists/*
+
+# Create the run directory for MySQL
 RUN mkdir -p /var/run/mysqld && chown -R mysql:mysql /var/run/mysqld && chmod 777 /var/run/mysqld
 
 EXPOSE 3306
 
-COPY ./tools/mariadb.sh /usr/local/bin/
-COPY ./conf/wordpress.sql /usr/local/bin/
+# Copy our DB initialization script
+COPY tools/mariadb.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/mariadb.sh
-RUN chmod +x /usr/local/bin/wordpress.sql
 
+# This script does all the initialization, then execs the final command
 ENTRYPOINT ["/usr/local/bin/mariadb.sh"]
-
+# Pass "mysqld --bind-address=0.0.0.0" via CMD
 CMD ["mysqld", "--bind-address=0.0.0.0"]
